--- a/css/menu-styles/modern-styles.css
+++ b/css/menu-styles/modern-styles.css
@@ -1,116 +1,123 @@
-.ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region .ucb-menu {
-  gap: 0rem;
-}
+@media only screen and (min-width: 601px) {
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region .ucb-menu {
+    gap: 0rem;
+  }
 
-.ucb-header-dark .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region {
-  background-color: #424242;
-}
+  .ucb-header-dark .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region {
+    background-color: #424242;
+  }
 
-.ucb-header-light .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region {
-  background-color: #eee;
-}
+  .ucb-header-light .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region {
+    background-color: #eee;
+  }
 
-.ucb-header-white .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region {
-  background-color: #fff;
-}
+  .ucb-header-white .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region {
+    background-color: #fff;
+  }
 
-.ucb-header-black .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region {
-  background-color: #000;
-}
+  .ucb-header-black .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region {
+    background-color: #000;
+  }
 
-.ucb-header-black .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.nav-link,
-.ucb-header-dark .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.nav-link {
-  color:#fff;
-}
+  .ucb-header-black .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.nav-link,
+  .ucb-header-dark .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.nav-link {
+    color: #fff;
+  }
 
-.ucb-header-light .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.nav-link,
-.ucb-header-white .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.nav-link {
-  color:#000;
-}
-.ucb-main-nav-section {
-  border-bottom: 5px solid #cfb87c;
-}
+  .ucb-header-light .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.nav-link,
+  .ucb-header-white .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.nav-link {
+    color: #000;
+  }
 
-.ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.nav-link {
-  margin-left: 4px;
-  margin-right: 4px;
-  padding: 0 5px;
-}
+  .ucb-main-nav-section {
+    border-bottom: 5px solid #cfb87c;
+  }
 
-.ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item:hover {
-  background-color: #666;
-}
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.nav-link {
+    margin-left: 4px;
+    margin-right: 4px;
+    padding: 0 5px;
+  }
 
-.ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item:hover a.nav-link {
-  color: #fff;
-}
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item:hover {
+    background-color: #666;
+  }
 
-.ucb-secondary-menu-region-container li.menu-item a.nav-link {
-  color: #fff;
-  display: inline-block;
-}
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item:hover a.nav-link {
+    color: #fff;
+  }
 
-.ucb-secondary-menu-region-container li.menu-item a.nav-link:hover,
-.ucb-secondary-menu-region-container li.menu-item a.nav-link:focus {
-  color: #fff;
-  background-color: #666;
-}
+  .ucb-secondary-menu-region-container li.menu-item a.nav-link {
+    color: #fff;
+    display: inline-block;
+  }
 
-.ucb-secondary-menu-region-container li.menu-item a.nav-link.is-active,
-.ucb-secondary-menu-region-container li.menu-item.active a.nav-link:first-of-type {
-  color: #000;
-  background-color: #cfb87c;
-}
-.ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region li.menu-item a.nav-link {
+  .ucb-secondary-menu-region-container li.menu-item a.nav-link:hover,
+  .ucb-secondary-menu-region-container li.menu-item a.nav-link:focus {
+    color: #fff;
+    background-color: #666;
+  }
+
+  .ucb-secondary-menu-region-container li.menu-item a.nav-link.is-active,
+  .ucb-secondary-menu-region-container li.menu-item.active a.nav-link:first-of-type {
+    color: #000;
+    background-color: #cfb87c;
+  }
+
+  .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region li.menu-item a.nav-link {
     line-height: 24px;
     margin: 8px 5px;
     padding: 0 5px;
     display: inline-block;
     font-weight: 400;
-}
+  }
 
-.ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-menu a {
-  color: #fff;
-}
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-menu a {
+    color: #fff;
+  }
 
-.ucb-primary-menu-region,
-section.ucb-main-nav-section {
-  background-color: #222;
-  color: #fff;
-}
+  .ucb-primary-menu-region,
+  section.ucb-main-nav-section {
+    background-color: #222;
+    color: #fff;
+  }
 
-.ucb-main-menu li.menu-item a.nav-link {
-  font-weight: 600;
-  color: #fff;
-  border-bottom: none;
-}
+  .ucb-main-menu li.menu-item a.nav-link {
+    font-weight: 600;
+    color: #fff;
+    border-bottom: none;
+  }
 
-.ucb-main-menu li.menu-item a.nav-link:hover {
-  background-color: #444;
-  border-bottom: none;
-  color: #fff;
-}
-.ucb-main-menu li.menu-item a.nav-link.is-active,
-.ucb-main-menu li.menu-item.active a.nav-link:first-of-type{
-  background-color: #cfb87c;
-  color: #000;
-}
-.ucb-main-menu li.menu-item a.nav-link.home-link,
-.ucb-main-menu li.menu-item a.nav-link.home-link.active {
-  background-color: transparent;
-  color: #fff;
-}
-.ucb-main-menu li.menu-item a.nav-link.home-link {
-  margin-left: -12px;
-}
+  .ucb-main-menu li.menu-item a.nav-link:hover {
+    background-color: #444;
+    border-bottom: none;
+    color: #fff;
+  }
 
-.ucb-footer-menu-region {
-  border-top: 5px solid #cfb87c;
-}
+  .ucb-main-menu li.menu-item a.nav-link.is-active,
+  .ucb-main-menu li.menu-item.active a.nav-link:first-of-type {
+    background-color: #cfb87c;
+    color: #000;
+  }
 
-.after-content-wrapper,
-.after-content2-wrapper,
-.footer-wrapper,
-.ucb-footer-bottom {
-  padding: 40px 0px 20px;
+  .ucb-main-menu li.menu-item a.nav-link.home-link,
+  .ucb-main-menu li.menu-item a.nav-link.home-link.active {
+    background-color: transparent;
+    color: #fff;
+  }
+
+  .ucb-main-menu li.menu-item a.nav-link.home-link {
+    margin-left: -12px;
+  }
+
+  .ucb-footer-menu-region {
+    border-top: 5px solid #cfb87c;
+  }
+
+  .after-content-wrapper,
+  .after-content2-wrapper,
+  .footer-wrapper,
+  .ucb-footer-bottom {
+    padding: 40px 0px 20px;
+  }
 }
