--- a/css/menu-styles/simple-styles.css
+++ b/css/menu-styles/simple-styles.css
@@ -1,15 +1,19 @@
-.ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region.ucb-secondary-menu-button-display .ucb-secondary-menu-region-container .ucb-menu {
-  gap: 0rem;
-  margin-bottom: -4px;
-}
-.ucb-main-nav-container.ucb-secondary-menu-position-above {
-  padding: 20px 0;
-}
-.ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region {
-  background-color: #fff;
-}
-.ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-primary-menu-region-container,
-.ucb-main-nav-container.ucb-secondary-menu-position-inline {
+@media only screen and (min-width: 601px) {
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region.ucb-secondary-menu-button-display .ucb-secondary-menu-region-container .ucb-menu {
+    gap: 0rem;
+    margin-bottom: -4px;
+  }
+
+  .ucb-main-nav-container.ucb-secondary-menu-position-above {
+    padding: 20px 0;
+  }
+
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region {
+    background-color: #fff;
+  }
+
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-primary-menu-region-container,
+  .ucb-main-nav-container.ucb-secondary-menu-position-inline {
     background-color: #363636;
     background-image: -webkit-gradient(linear, left top, left bottom, from(#363636), to(#161616));
     background-image: -webkit-linear-gradient(top, #363636, #161616);
@@ -17,152 +21,151 @@
     background-image: -o-linear-gradient(top, #363636, #161616);
     background-image: -ms-linear-gradient(top, #363636, #161616);
     background-image: linear-gradient(top, #363636, #161616);
-    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#FF363636', EndColorStr='#FF161616');
-}
-
-section.ucb-main-nav-section {
-  box-shadow: none;
-  margin-bottom: 1px;
-}
-.ucb-main-nav-container.ucb-secondary-menu-position-inline {
-  margin-top: 20px;
-  box-shadow: 0 2px 5px rgba(0 0 0 /10%);
-}
-
-.ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region li.menu-item a {
-  color: #aaa;
-}
-
-.ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region li.menu-item a:hover {
-  color: #fff;
-  background: transparent;
-}
-
-.ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .ucb-menu li.menu-item a {
-	margin-left: .25em;
-	margin-right: .25em;
-}
-
-.after-content-wrapper,
-.after-content2-wrapper,
-.footer-wrapper,
-.ucb-footer-bottom {
-  padding: 40px 0px 20px;
-}
-
-
-@media screen and (min-width: 960px) {
-  .banner-white .navigation-wrapper {
-    padding-bottom: 20px;
+    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr='#FF363636', EndColorStr='#FF161616');
   }
-  .banner-black .navigation-wrapper {
-    padding: 20px 0 20px;
+
+  section.ucb-main-nav-section {
+    box-shadow: none;
+    margin-bottom: 1px;
   }
-}
 
-.ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region {
-  color: #363636;
-}
-.ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a {
-  color: #363636;
-  display: inline-block;
-  font-weight: 400;
-  padding: 0 10px;
-}
-.ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a:hover,
-.ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a:focus {
-  color: #fff;
-  background-color: #555;
-  background-image: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(#555),
-    to(#333)
-  );
-  background-image: -webkit-linear-gradient(top, #555, #333);
-  background-image: -moz-linear-gradient(top, #555, #333);
-  background-image: -o-linear-gradient(top, #555, #333);
-  background-image: -ms-linear-gradient(top, #555, #333);
-  background-image: linear-gradient(top, #555, #333);
-  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#FF555555', EndColorStr='#FF333333');
-}
-.ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.is-active,
-.ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item.active a:first-of-type {
-  background-color: #cfb87c;
-  background-image: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(#cfb87c),
-    to(#bd9e4c)
-  );
-  background-image: -webkit-linear-gradient(top, #cfb87c, #bd9e4c);
-  background-image: -moz-linear-gradient(top, #cfb87c, #bd9e4c);
-  background-image: -o-linear-gradient(top, #cfb87c, #bd9e4c);
-  background-image: -ms-linear-gradient(top, #cfb87c, #bd9e4c);
-  background-image: linear-gradient(top, #cfb87c, #bd9e4c);
-  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#FFCFB87C', EndColorStr='#FFBD9E4C');
-  color: #000;
-}
+  .ucb-main-nav-container.ucb-secondary-menu-position-inline {
+    margin-top: 20px;
+    box-shadow: 0 2px 5px rgba(0 0 0 /10%);
+  }
 
-#main-menu-wrapper {
-  background-color: #fff;
-  color: #fff;
-}
+  .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region li.menu-item a {
+    color: #aaa;
+  }
 
-#main-menu-wrapper nav.region-menu {
-  background-color: #363636;
-  background-image: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(#363636),
-    to(#161616)
-  );
-  background-image: -webkit-linear-gradient(top, #363636, #161616);
-  background-image: -moz-linear-gradient(top, #363636, #161616);
-  background-image: -o-linear-gradient(top, #363636, #161616);
-  background-image: -ms-linear-gradient(top, #363636, #161616);
-  background-image: linear-gradient(top, #363636, #161616);
-  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#FF363636', EndColorStr='#FF161616');
-}
+  .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region li.menu-item a:hover {
+    color: #fff;
+    background: transparent;
+  }
 
-.ucb-main-menu li.menu-item a.nav-link {
-	font-weight: 600;
-	color: #fff;
-	border-bottom: none;
-	margin-top: 0;
-}
+  .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .ucb-menu li.menu-item a {
+    margin-left: .25em;
+    margin-right: .25em;
+  }
 
-.ucb-main-menu li.menu-item a.nav-link, .ucb-secondary-menu-region li.menu-item {
-	font-size: .9em;
-}
-
-.ucb-main-menu li.menu-item a.nav-link:hover,
-.ucb-main-menu li.menu-item a.nav-link.is-active,
-.ucb-main-menu li.menu-item.active a.nav-link:first-of-type {
-  background-color: #cfb87c;
-  background-image: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(#cfb87c),
-    to(#bd9e4c)
-  );
-  background-image: -webkit-linear-gradient(top, #cfb87c, #bd9e4c);
-  background-image: -moz-linear-gradient(top, #cfb87c, #bd9e4c);
-  background-image: -o-linear-gradient(top, #cfb87c, #bd9e4c);
-  background-image: -ms-linear-gradient(top, #cfb87c, #bd9e4c);
-  background-image: linear-gradient(top, #cfb87c, #bd9e4c);
-  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#FFCFB87C', EndColorStr='#FFBD9E4C');
-  color: #000;
-  border-bottom: none;
-}
+  .after-content-wrapper,
+  .after-content2-wrapper,
+  .footer-wrapper,
+  .ucb-footer-bottom {
+    padding: 40px 0px 20px;
+  }
 
 
-.ucb-main-menu li.menu-item a.nav-link:hover,
-.ucb-main-menu li.menu-item a.nav-link.is-active,
-.ucb-main-menu li.menu-item.active a.nav-link:first-of-type{
-  color: #000;
+  @media screen and (min-width: 960px) {
+    .banner-white .navigation-wrapper {
+      padding-bottom: 20px;
+    }
+
+    .banner-black .navigation-wrapper {
+      padding: 20px 0 20px;
+    }
+  }
+
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region {
+    color: #363636;
+  }
+
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a {
+    color: #363636;
+    display: inline-block;
+    font-weight: 400;
+    padding: 0 10px;
+  }
+
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a:hover,
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a:focus {
+    color: #fff;
+    background-color: #555;
+    background-image: -webkit-gradient(linear,
+        left top,
+        left bottom,
+        from(#555),
+        to(#333));
+    background-image: -webkit-linear-gradient(top, #555, #333);
+    background-image: -moz-linear-gradient(top, #555, #333);
+    background-image: -o-linear-gradient(top, #555, #333);
+    background-image: -ms-linear-gradient(top, #555, #333);
+    background-image: linear-gradient(top, #555, #333);
+    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr='#FF555555', EndColorStr='#FF333333');
+  }
+
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.is-active,
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item.active a:first-of-type {
+    background-color: #cfb87c;
+    background-image: -webkit-gradient(linear,
+        left top,
+        left bottom,
+        from(#cfb87c),
+        to(#bd9e4c));
+    background-image: -webkit-linear-gradient(top, #cfb87c, #bd9e4c);
+    background-image: -moz-linear-gradient(top, #cfb87c, #bd9e4c);
+    background-image: -o-linear-gradient(top, #cfb87c, #bd9e4c);
+    background-image: -ms-linear-gradient(top, #cfb87c, #bd9e4c);
+    background-image: linear-gradient(top, #cfb87c, #bd9e4c);
+    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr='#FFCFB87C', EndColorStr='#FFBD9E4C');
+    color: #000;
+  }
+
+  #main-menu-wrapper {
+    background-color: #fff;
+    color: #fff;
+  }
+
+  #main-menu-wrapper nav.region-menu {
+    background-color: #363636;
+    background-image: -webkit-gradient(linear,
+        left top,
+        left bottom,
+        from(#363636),
+        to(#161616));
+    background-image: -webkit-linear-gradient(top, #363636, #161616);
+    background-image: -moz-linear-gradient(top, #363636, #161616);
+    background-image: -o-linear-gradient(top, #363636, #161616);
+    background-image: -ms-linear-gradient(top, #363636, #161616);
+    background-image: linear-gradient(top, #363636, #161616);
+    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr='#FF363636', EndColorStr='#FF161616');
+  }
+
+  .ucb-main-menu li.menu-item a.nav-link {
+    font-weight: 600;
+    color: #fff;
+    border-bottom: none;
+    margin-top: 0;
+  }
+
+  .ucb-main-menu li.menu-item a.nav-link,
+  .ucb-secondary-menu-region li.menu-item {
+    font-size: .9em;
+  }
+
+  .ucb-main-menu li.menu-item a.nav-link:hover,
+  .ucb-main-menu li.menu-item a.nav-link.is-active,
+  .ucb-main-menu li.menu-item.active a.nav-link:first-of-type {
+    background-color: #cfb87c;
+    background-image: -webkit-gradient(linear,
+        left top,
+        left bottom,
+        from(#cfb87c),
+        to(#bd9e4c));
+    background-image: -webkit-linear-gradient(top, #cfb87c, #bd9e4c);
+    background-image: -moz-linear-gradient(top, #cfb87c, #bd9e4c);
+    background-image: -o-linear-gradient(top, #cfb87c, #bd9e4c);
+    background-image: -ms-linear-gradient(top, #cfb87c, #bd9e4c);
+    background-image: linear-gradient(top, #cfb87c, #bd9e4c);
+    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr='#FFCFB87C', EndColorStr='#FFBD9E4C');
+    color: #000;
+    border-bottom: none;
+  }
+
+
+  .ucb-main-menu li.menu-item a.nav-link:hover,
+  .ucb-main-menu li.menu-item a.nav-link.is-active,
+  .ucb-main-menu li.menu-item.active a.nav-link:first-of-type {
+    color: #000;
+  }
 }
