--- a/css/menu-styles/swatch-styles.css
+++ b/css/menu-styles/swatch-styles.css
@@ -1,116 +1,131 @@
-.ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region.ucb-secondary-menu-button-display .ucb-secondary-menu-region-container .ucb-menu {
-  gap: 0rem;
-}
-.ucb-main-menu li.menu-item a.nav-link {
-  margin-top: 2px;
-}
-.ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item {
- background-color: #333;
- transition: background-color .5 ease, color .5s ease;
-}
+@media only screen and (min-width: 601px) {
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region.ucb-secondary-menu-button-display .ucb-secondary-menu-region-container .ucb-menu {
+    gap: 0rem;
+  }
 
-.ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a {
-  transition: none;
- }
+  .ucb-main-menu li.menu-item a.nav-link {
+    margin-top: 2px;
+  }
 
-.ucb-header-dark .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region,
-.ucb-header-dark .ucb-secondary-menu-region .ucb-secondary-menu-region-container {
-  background-color: #424242;
-}
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item {
+    background-color: #333;
+    transition: background-color .5 ease, color .5s ease;
+  }
 
-.ucb-header-light .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region,
-.ucb-header-light .ucb-secondary-menu-region .ucb-secondary-menu-region-container {
-  background-color: #eee;
-}
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a {
+    transition: none;
+  }
 
-.ucb-header-white .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region,
-.ucb-header-white .ucb-secondary-menu-region .ucb-secondary-menu-region-container {
-  background-color: #fff;
-}
+  .ucb-header-dark .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region,
+  .ucb-header-dark .ucb-secondary-menu-region .ucb-secondary-menu-region-container {
+    background-color: #424242;
+  }
 
-.ucb-header-black .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region,
-.ucb-header-black .ucb-secondary-menu-region .ucb-secondary-menu-region-container {
-  background-color: #000;
-}
+  .ucb-header-light .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region,
+  .ucb-header-light .ucb-secondary-menu-region .ucb-secondary-menu-region-container {
+    background-color: #eee;
+  }
 
-.ucb-secondary-menu-region-container {
-  background-color: #000;
-  color: white;
-}
-.ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region .ucb-menu {
-  background-color: transparent;
-}
-.ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.nav-link {
-  padding: 0 5px;
-  display: inline-block;
-  color: #fff;
-  font-weight: 400;
-}
-.ucb-secondary-menu-region.ucb-secondary-menu-button-display .ucb-secondary-menu-region-container .menu-item a:hover {
-  color: #cfb87c;
-  background-color: transparent;
-  box-shadow: none;
-}
+  .ucb-header-white .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region,
+  .ucb-header-white .ucb-secondary-menu-region .ucb-secondary-menu-region-container {
+    background-color: #fff;
+  }
+
+  .ucb-header-black .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region,
+  .ucb-header-black .ucb-secondary-menu-region .ucb-secondary-menu-region-container {
+    background-color: #000;
+  }
+
+  .ucb-secondary-menu-region-container {
+    background-color: #000;
+    color: white;
+  }
+
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region .ucb-menu {
+    background-color: transparent;
+  }
+
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.nav-link {
+    padding: 0 5px;
+    display: inline-block;
+    color: #fff;
+    font-weight: 400;
+  }
+
+  .ucb-secondary-menu-region.ucb-secondary-menu-button-display .ucb-secondary-menu-region-container .menu-item a:hover {
+    color: #cfb87c;
+    background-color: transparent;
+    box-shadow: none;
+  }
 
 
-.ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item:hover,
-.ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item:focus,
-.ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item.is-active {
-  color: #fff;
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item:hover,
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item:focus,
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item.is-active {
+    color: #fff;
     background-color: #757575;
-}
-section.ucb-main-nav-section {
-  background-color: #222;
-}
-.ucb-main-menu li.menu-item a.nav-link {
-  color: #ccc;
-  font-size: 90%;
-  font-weight: 600;
-  line-height: 60px;
-  border-bottom: none;
-}
-.ucb-main-menu li.menu-item a.nav-link:hover {
-  background-color: #444;
-  color: #fff;
-  border-bottom: none;
-}
-.ucb-main-menu li.menu-item a.nav-link.is-active,
-.ucb-main-menu li.menu-item.active a.nav-link:first-of-type{
-  background-color: #333;
-  color: #fff;
-  border-bottom: none;
-}
-.ucb-main-menu li.menu-item a.nav-link.is-active:hover,
-.ucb-main-menu li.menu-item.active a.nav-link:first-of-type:hover {
-  color: #fff;
-  border-bottom: none;
-}
-.ucb-main-menu li.menu-item a.nav-link.home-link,
-.ucb-main-menu li.menu-item a.nav-link.home-link.active {
-  color: #ccc;
-  background-color: transparent;
-  border-bottom: none;
-}
-#main-menu-wrapper ul#main-menu a.home-link {
-  margin-left: -12px;
-}
+  }
 
-ul#action-menu a {
-  line-height: 20px;
-  margin: 20px 0 20px 10px;
-}
+  section.ucb-main-nav-section {
+    background-color: #222;
+  }
 
-.ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .ucb-secondary-menu-region-container {
-  background: #222;
-}
+  .ucb-main-menu li.menu-item a.nav-link {
+    color: #ccc;
+    font-size: 90%;
+    font-weight: 600;
+    line-height: 60px;
+    border-bottom: none;
+  }
 
-.ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region li.menu-item a.nav-link {
-  margin: 18px 5px;
-  color: #aaa;
-  background: #222;
-  font-weight: 400;
-}
-.ucb-button-none.ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region li.menu-item a.nav-link:hover {
-  color: #fff;
-  background: #222;
+  .ucb-main-menu li.menu-item a.nav-link:hover {
+    background-color: #444;
+    color: #fff;
+    border-bottom: none;
+  }
+
+  .ucb-main-menu li.menu-item a.nav-link.is-active,
+  .ucb-main-menu li.menu-item.active a.nav-link:first-of-type {
+    background-color: #333;
+    color: #fff;
+    border-bottom: none;
+  }
+
+  .ucb-main-menu li.menu-item a.nav-link.is-active:hover,
+  .ucb-main-menu li.menu-item.active a.nav-link:first-of-type:hover {
+    color: #fff;
+    border-bottom: none;
+  }
+
+  .ucb-main-menu li.menu-item a.nav-link.home-link,
+  .ucb-main-menu li.menu-item a.nav-link.home-link.active {
+    color: #ccc;
+    background-color: transparent;
+    border-bottom: none;
+  }
+
+  #main-menu-wrapper ul#main-menu a.home-link {
+    margin-left: -12px;
+  }
+
+  ul#action-menu a {
+    line-height: 20px;
+    margin: 20px 0 20px 10px;
+  }
+
+  .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .ucb-secondary-menu-region-container {
+    background: #222;
+  }
+
+  .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region li.menu-item a.nav-link {
+    margin: 18px 5px;
+    color: #aaa;
+    background: #222;
+    font-weight: 400;
+  }
+
+  .ucb-button-none.ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region li.menu-item a.nav-link:hover {
+    color: #fff;
+    background: #222;
+  }
 }
